tests/ui/formatter/fail/unsupported_flag.stderr
error: placeholder spanning bytes 0..11 uses an unsupported formatter
 --> tests/ui/formatter/fail/unsupported_flag.rs:4:10
  |
4 | #[error("{value:##x}")]
  |          ^^^^^^^^^^^
